# sinoTTSImporter

./: .gitignore  CMakeLists.txt  TickTsOrderImporter.java  azure-pipelines.yml  compress.cpp
include/: config.h  copyFileViaSSH.h  curlRest.h  dbConnect.h  log.h  orderExecutions.h  orders.h  sqlquery.h  users.h
src/: MemoryInDatabase.cpp  cRegex.cpp  copyFileViaSSH.cpp  curlRest.cpp  dbConnect.cpp  decompress.cpp  decompressFiles.cpp  main.cpp  orderExecutions.cpp  orders.cpp  shshhs.coo  users.cpp
